# rustymode

./: CITATION.cff  Cargo.toml  README.md  config.toml  rustymode-raspi.sh
.github/workflows/: rust.yml
src/: args.rs  color.rs  config.rs  error.rs  lib.rs  main.rs  slack.rs  test.rs
