[package]
name = "rustymode"
version = "0.1.0"
authors = ["Dmitry Sobolev <sobolev@gmail.com"]
edition = "2024"
rust-version = "1.88.0"
description = "OpenCV based motion detection/recording/streaming software with alerting support."
readme = "README.md"
repository = "https://github.com/s0b01ev/rustymode/"
license = "GPL-3.0-only"
keywords = ["opencv", "motion", "video-recording", "streaming"]
categories = ["command-line-utilities", "computer-vision", "science"]

[package.metadata]
original-project = "https://github.com/marcoradocchia/bombuscv-rs/"
original-author = "Marco Radocchia <marco.radocchia@outlook.com>"

[[bin]]
name = "rustymode"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.79"
clap = { version = "3.2.16", features = ["derive"] }
serde = { version = "1.0.140", features = ["derive"] }
directories = "4.0.1"
toml = "0.5.9"
chrono = "0.4.19"
opencv = "0.92.0"
signal-hook = "0.3.14"
termcolor = "1.1.3"
atty = "0.2.14"
slack-hook = "0.8.0"
url = "2.5.4"
openssl-sys = { version = "0.9.104", features = ["vendored"] }

[profile.release]
lto = true   # link-time-optimization
strip = true # strip symbols from binary
